# template-ansible

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint.yml  LICENSE  README.md  Taskfile.yml  ansible.cfg  pyproject.toml  requirements.yml  site.yml
.github/workflows/: push.yml
config/: ssh_config
inventory/: production  staging
inventory/group_vars/all/: common.yml
inventory/group_vars/dbservers/: main.yml
inventory/group_vars/webservers/: main.yml
inventory/host_vars/host1.example.com/: main.yml
playbooks/: example.yml
roles/common/defaults/: main.yml
roles/common/handlers/: main.yml
roles/common/meta/: main.yml
roles/common/tasks/: main.yml
roles/common/templates/: ntp.conf.j2
roles/database/defaults/: main.yml
roles/database/handlers/: main.yml
roles/database/meta/: main.yml
roles/database/tasks/: main.yml
roles/database/templates/: postgresql.conf.j2
roles/webserver/defaults/: main.yml
roles/webserver/handlers/: main.yml
roles/webserver/meta/: main.yml
roles/webserver/tasks/: main.yml
roles/webserver/templates/: nginx.conf.j2
